--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1414,6 +1414,14 @@
     "@recommendations_limit_reached_tooltip": {
         "description": "Tooltip when the recommendation limit is reached"
     },
+    "recommendations_no_active_landingpage_tooltip": "No active landing page assigned",
+    "@recommendations_no_active_landingpage_tooltip": {
+        "description": "Tooltip when no active landing page is assigned"
+    },
+    "recommendations_no_active_landingpage_warning": "No recommendations possible - You have no active landing page assigned",
+    "@recommendations_no_active_landingpage_warning": {
+        "description": "Warning when no active landing page is assigned"
+    },
     "landingpage_pagebuilder_container_request_error": "An error occurred while retrieving the data",
     "@landingpage_pagebuilder_container_request_error": {
         "description": "Error title on the page builder page if request fails"
