added section name

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2675,17 +2675,17 @@
     "@pagebuilder_config_menu_hover_switch": {
         "description": "Title of the hover switch in the hover tab in the pagebuilder config menu"
     },
-    "pagebuilder_anchor_button_content_section_id": "Section ID",
-    "@pagebuilder_anchor_button_content_section_id": {
-        "description": "Title for the collapsible view for the anchor button section id in the pagebuilder anchor button configuration"
+    "pagebuilder_anchor_button_content_section_name": "Section Name",
+    "@pagebuilder_anchor_button_content_section_name": {
+        "description": "Title for the collapsible view for the anchor button section name in the pagebuilder anchor button configuration"
     },
-    "pagebuilder_anchor_button_content_section_id_subtitle": "Please enter the section ID you want to scroll to. You can find this in the respective section.",
-    "@pagebuilder_anchor_button_content_section_id_subtitle": {
-        "description": "Subtitle for the collapsible view for the anchor button section id in the pagebuilder anchor button configuration"
+    "pagebuilder_anchor_button_content_section_name_subtitle": "Please enter the section name you want to scroll to. You can find this in the respective section.",
+    "@pagebuilder_anchor_button_content_section_name_subtitle": {
+        "description": "Subtitle for the collapsible view for the anchor button section name in the pagebuilder anchor button configuration"
     },
-    "pagebuilder_anchor_button_content_section_id_placeholder": "Section ID",
-    "@pagebuilder_anchor_button_content_section_id_placeholder": {
-        "description": "Placeholder for the textfield in the collapsible view for the anchor button section id in the pagebuilder anchor button configuration"
+    "pagebuilder_anchor_button_content_section_name_placeholder": "Section name",
+    "@pagebuilder_anchor_button_content_section_name_placeholder": {
+        "description": "Placeholder for the textfield in the collapsible view for the anchor button section name in the pagebuilder anchor button configuration"
     },
     "pagebuilder_section_id": "ID:",
     "@pagebuilder_section_id": {
@@ -3296,5 +3296,21 @@
     "pagebuilder_ok": "OK",
     "@pagebuilder_ok": {
         "description": "OK button text"
+    },
+    "pagebuilder_section_id_placeholder": "Section ID",
+    "@pagebuilder_section_id_placeholder": {
+        "description": "Placeholder text for section ID input field"
+    },
+    "pagebuilder_section_name_error_empty": "Section ID cannot be empty",
+    "@pagebuilder_section_name_error_empty": {
+        "description": "Error message when section ID is empty"
+    },
+    "pagebuilder_section_name_error_too_long": "Section ID cannot exceed 50 characters",
+    "@pagebuilder_section_name_error_too_long": {
+        "description": "Error message when section ID is too long"
+    },
+    "pagebuilder_section_name_error_duplicate": "Section ID already exists",
+    "@pagebuilder_section_name_error_duplicate": {
+        "description": "Error message when section ID is duplicate"
     }
 }
