--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1666,6 +1666,19 @@
     "@landingpage_pagebuilder_layout_menu_alignment": {
         "description": "Titel Ausrichtung Menüpunkt im Pagebuilder Config Menü im Layout Bereich"
     },
+    "landingpage_pagebuilder_layout_menu_width_percentage": "Breite in %",
+    "@landingpage_pagebuilder_layout_menu_width_percentage": {
+        "description": "Titel Breite in Prozent Menüpunkt im Pagebuilder Config Menü im Layout Bereich"
+    },
+    "landingpage_pagebuilder_layout_menu_width_warning": "Summe der Breiten: {totalWidth}% (wird auf 100% skaliert)",
+    "@landingpage_pagebuilder_layout_menu_width_warning": {
+        "description": "Warnung wenn die Summe der Breiten über 100% liegt im Pagebuilder Config Menü im Layout Bereich",
+        "placeholders": {
+            "totalWidth": {
+                "type": "String"
+            }
+        }
+    },
     "landingpage_pagebuilder_layout_menu_image_control_switch": "Promoter Bild anzeigen",
     "@landingpage_pagebuilder_layout_menu_image_control_switch": {
         "description": "Switch Titel für Promoter Bild im Pagebuilder Config Menü im Hintergrund Bereich"
@@ -2698,6 +2711,22 @@
     "pagebuilder_hierarchy_button_tooltip": "Seitenhierarchie anzeigen",
     "@pagebuilder_hierarchy_button_tooltip": {
         "description": "Button Tooltip für den Seitenhierarchie Button in der Pagebuilder AppBar"
+    },
+    "pagebuilder_responsive_preview_button_tooltip": "Responsiver Modus",
+    "@pagebuilder_responsive_preview_button_tooltip": {
+        "description": "Button Tooltip für den Responsive Preview Button in der Pagebuilder AppBar"
+    },
+    "pagebuilder_breakpoint_desktop": "Desktop",
+    "@pagebuilder_breakpoint_desktop": {
+        "description": "Bezeichnung für Desktop Breakpoint im Pagebuilder"
+    },
+    "pagebuilder_breakpoint_tablet": "Tablet",
+    "@pagebuilder_breakpoint_tablet": {
+        "description": "Bezeichnung für Tablet Breakpoint im Pagebuilder"
+    },
+    "pagebuilder_breakpoint_mobile": "Mobile",
+    "@pagebuilder_breakpoint_mobile": {
+        "description": "Bezeichnung für Mobile Breakpoint im Pagebuilder"
     },
     "pagebuilder_hierarchy_overlay_title": "Seitenstruktur",
     "@pagebuilder_hierarchy_overlay_title": {
