edited localization message

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -2089,7 +2089,7 @@
     "@landingpage_creator_ai_loading_subtitle": {
         "description": "Subtitel für das Loading Overlay der KI Generierung im Landingpage Creator"
     },
-    "landingpage_creator_ai_loading_subtitle2": "Das kann bis zu 5 Minuten dauern. Bitte warten...",
+    "landingpage_creator_ai_loading_subtitle2": "Das kann bis zu 5 Minuten dauern.\nDu kannst diese Seite verlassen. Die Landingpage wird dir nach der Generierung in der Übersicht angezeigt.",
     "@landingpage_creator_ai_loading_subtitle2": {
         "description": "Weiterer Subtitel für das Loading Overlay der KI Generierung im Landingpage Creator"
     },
