--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2089,7 +2089,7 @@
     "@landingpage_creator_ai_loading_subtitle": {
         "description": "Subtitle for the loading overlay of the AI ​​generation in the landing page creator"
     },
-    "landingpage_creator_ai_loading_subtitle2": "This may take up to 5 minutes. Please wait...",
+    "landingpage_creator_ai_loading_subtitle2": "This may take up to 5 minutes.\nYou can leave this site. The landingpage will appear in your overview when it has been generated.",
     "@landingpage_creator_ai_loading_subtitle2": {
         "description": "Another Subtitle for the loading overlay of the AI ​​generation in the landing page creator"
     },
